--- a/index.html
+++ b/index.html
@@ -94,20 +94,28 @@
  	<div class="flex_box section">
 
 	<div class="tabs">
-		<div class="tab1"> <h4>tab1</h4> </div>
-		<div class="tab2"> <h4>tab2</h4> </div>
-		<div class="tab3"> <h4>tab3</h4> </div>
+		<div class="tab1 tabs_btn"> <h4>tab1</h4> </div>
+		<div class="tab2 tabs_btn"> <h4>tab2</h4> </div>
+		<div class="tab3 tabs_btn"> <h4>tab3</h4> </div>
 
 	</div>
 	
 	<div class="tabs_info">
-		<h3>Tabs with soft transitioning effect.</h3>
-		<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 		Aenean euismod 
-			bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
-			justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
-			penatibus et magnis dis parturient montes.</p>
-		<p class="second_text">	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
-			bibendum laoreet.</p>
+		<div class="tabs_info_1 tabs_func">
+            <h3>Tabs 1 with soft transitioning effect.</h3>
+            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. 		Aenean euismod 
+                bibendum laoreet. Proin gravida dolor sit amet lacus accumsan et viverra 
+                justo commodo. Proin sodales pulvinar tempor. Cum sociis natoque 
+                penatibus et magnis dis parturient montes.</p>
+            <p class="second_text">	Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean euismod 
+                bibendum laoreet.</p>
+        </div>
+		<div class="tabs_info_2 tabs_func">
+            <h3>Tabs 2 with soft transitioning effect.</h3>
+        </div>
+		<div class="tabs_info_3 tabs_func">
+            <h3>Tabs 3 with soft transitioning effect.</h3>
+        </div>
 			<form><button>Download</button></form>
 	</div>
 	<div class="decoration"> 
@@ -375,6 +383,6 @@
 </footer>
 
 
-<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>	
+<script src="main.js"></script>	
 </body>
 </html>
